--- a/Artificial Evolution.ipynb
+++ b/Artificial Evolution.ipynb
@@ -9,7 +9,7 @@
     "I want to be able to guess the best allele variants required to maximise a particular trait or traits. Evolution does this by... evolution. To do this I need to make a few assumptions that I believe are pretty fair assuptions to make.\n",
     "\n",
     "1. Gene interactions are *not* too complex or impossible to model.\n",
-    "2. The phenotype of unseen genetype combinatoins can be estimated by a model."
+    "2. The phenotype of unseen genetype combinations can be estimated by a model."
    ]
   },
   {
@@ -15784,7 +15784,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 3.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
